--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "glslify": "^7.0.0",
+    "glslify-import-loader": "^0.1.2",
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^0.5.1"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
@@ -50,6 +54,8 @@
     "@tweenjs/tween.js": "^18.5.0",
     "flickity": "^2.2.1",
     "phaser": "^3.22.0",
+    "glsl-noise": "^0.0.0",
+    "simplex-noise": "^2.4.0",
     "three": "^0.113.2"
   }
 }
