--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
+    "glslify": "^7.0.0",
+    "glslify-import-loader": "^0.1.2",
+    "glslify-loader": "^2.0.0",
     "html-critical-webpack-plugin": "^2.1.0",
     "html-srcsets-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
@@ -25,6 +28,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.2.0",
     "postcss-will-change": "^3.0.0",
+    "raw-loader": "^0.5.1",
     "resolve-url-loader": "^3.0.0",
     "sharp": "^0.21.0",
     "style-loader": "^0.23.1",
@@ -32,11 +36,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "glslify": "^7.0.0",
-    "glslify-import-loader": "^0.1.2",
-    "glslify-loader": "^2.0.0",
-    "raw-loader": "^0.5.1"
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
@@ -53,8 +53,10 @@
     "@babel/runtime": "^7.1.5",
     "@tweenjs/tween.js": "^18.5.0",
     "flickity": "^2.2.1",
-    "phaser": "^3.22.0",
     "glsl-noise": "^0.0.0",
+    "js-cookie": "^2.2.1",
+    "phaser": "^3.22.0",
+    "phaser3-rex-plugins": "^1.1.8",
     "simplex-noise": "^2.4.0",
     "three": "^0.113.2"
   }
