--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
-    "glslify": "^7.0.0",
-    "glslify-import-loader": "^0.1.2",
-    "glslify-loader": "^2.0.0",
     "html-critical-webpack-plugin": "^2.1.0",
     "html-srcsets-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
@@ -54,6 +51,7 @@
     "@tweenjs/tween.js": "^18.5.0",
     "flickity": "^2.2.1",
     "glsl-noise": "^0.0.0",
+    "gsap": "^2.0.2",
     "js-cookie": "^2.2.1",
     "phaser": "^3.22.0",
     "phaser3-rex-plugins": "^1.1.8",
